Development history / change log, please read from bottom up

Version 3.3.2 - xx yyy 2017
* fix illegal formatting option in ParameterControl used for Graupner UDP charger
* fix HoTTAdapter wrong data block number detection
* add initial support for Junsi iCharger 106B
* fix empty template file name if user cancels loading a template
* fix some issues when adding / editing object keys
* context menu texts (graphics / data table tabs)

History analysis
	* New summary chart in the history graphics window
	* Enhance graphics template support
	 	>> new default templates per object key
	 	>> new histo templates format: pls load, check and re-save user histo templates!
	 	>> show a non-default template name in the status bar
	 	>> fix record mapping for the default graphics template 
	 	>> fix saving the last template instead of saving the default
	 	>> fix empty template file name if user cancels loading a template
	* Enhance graphics chart
	 	>> background colors selection
	 	>> initial vertical lines positions in delta measurement mode
	 	>> fix non-replaced measuring record names in recordset comment / status text
	 	>> fix unlimited scale for cell voltages if some logs do not hold cell voltages
	 	>> fix rare boxplot whisker length deviations
	 	>> fix missing timescale entries in case of many entries
	* Enhance folder scanning for log files
		>> new supplementary folder for import files and archived files
		>> new properties entries for external or network folders
	* Fix table issues
	 	>> column values for non-reversed timestamp sequence
	 	>> GPS location was not shown sometimes
	* Enhance UI
	  	>> make object key adding / editing more intuitive
	  	>> new tool tip texts
	 	>> new key shortcuts
	 	>> new menu entries
	 	>> fix unchecked curve survey menu entry after restart
	* Fix processing issues
	 	>> rare value differences for HoTT module log analysis and device settings changes
	 	>> values for channel items with relative data (based on first log value)